# nanobot

./: pyproject.toml
nanobot-channel-webhook/: pyproject.toml
nanobot-channel-webhook/nanobot_channel_webhook/: __init__.py  channel.py
nanobot/agent/: codex_proxy.py  loop.py
nanobot/agent/tools/: codex_run.py
nanobot/command/: builtin.py
nanobot/skills/clawhub/: SKILL.md
nanobot/skills/coding-agent/: SKILL.md
seatalk/: main.py
seatalk/plugins/: echo.py
tests/agent/: test_task_cancel.py
